# micro_servico_extracao

./: .gitignore  README.md  buildspec.yml  docker-compose.yml  docker_run_commands.txt
airflow/: Dockerfile  entrypoint.sh  env-staging  pyproject.toml
