[tool.poetry]
name = "micro_servico_extracao"
version = "0.1.0"
description = ""
authors = ["Caio Scaravajar <caio.scaravajar@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pandas = "~2.2.2"
dask = "~2024.7.1"
pre-commit = "~3.8.0"
psycopg2-binary = "~2.9.9"
pytest = "~8.3.2"
openpyxl = "~3.1.5"
boto3 = "~1.35.33"
tenacity = "~9.0.0"
pyarrow = "~17.0.0"
requests = "~2.32.3"
apache-airflow = "~2.10.2"
apache-airflow-providers-amazon = "~8.29.0"
apache-airflow-providers-celery = "~3.8.3"

[tool.poetry.dev-dependencies]
black = "~24.4.2"
isort = "~5.13.2"
mypy = "~1.11.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
disallow_untyped_calls = true
strict_optional = true

[virtualenvs]
in-project = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
